[gd_scene load_steps=15 format=3 uid="uid://b2m2qi88or5r7"]

[ext_resource type="Script" path="res://scripts/NPC/maya_kid.gd" id="1_g1jwp"]
[ext_resource type="Texture2D" uid="uid://bxrrheo8fnq7l" path="res://assets_image/Characters/Maya/Maya-Sheet.png" id="2_187pk"]
[ext_resource type="PackedScene" uid="uid://d3xk2w0qelwqr" path="res://scenes/SpeechBubble/speech_bubble.tscn" id="3_nbatg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyvmq"]
size = Vector2(10, 20)

[sub_resource type="Animation" id="Animation_cyrg1"]
length = 0.001

[sub_resource type="Animation" id="Animation_flku2"]
resource_name = "handsup"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Maya kid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [112, 113, 114]
}

[sub_resource type="Animation" id="Animation_yuh2j"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Maya kid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [144, 145, 146, 147]
}

[sub_resource type="Animation" id="Animation_re3fa"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Maya kid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [120]
}

[sub_resource type="Animation" id="Animation_d4bqq"]
resource_name = "low_down"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Maya kid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [104, 105, 106, 107, 108, 109]
}

[sub_resource type="Animation" id="Animation_lo21i"]
resource_name = "low_up"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Maya kid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [109, 108, 107, 106, 105, 104]
}

[sub_resource type="Animation" id="Animation_xn81u"]
resource_name = "run1"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Maya kid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [136, 137, 138, 139, 140, 141, 142, 143]
}

[sub_resource type="Animation" id="Animation_oqr0m"]
resource_name = "run2"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Maya kid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [128, 129, 130, 131, 132, 133, 134, 135]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dv64b"]
_data = {
"RESET": SubResource("Animation_cyrg1"),
"handsup": SubResource("Animation_flku2"),
"idle": SubResource("Animation_yuh2j"),
"jump": SubResource("Animation_re3fa"),
"low_down": SubResource("Animation_d4bqq"),
"low_up": SubResource("Animation_lo21i"),
"run1": SubResource("Animation_xn81u"),
"run2": SubResource("Animation_oqr0m")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svule"]
size = Vector2(32, 49)

[node name="Maya kid" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_g1jwp")
speech_bubble_scene = ExtResource("3_nbatg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_jyvmq")

[node name="Maya kid" type="Sprite2D" parent="."]
position = Vector2(1, -37)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_187pk")
hframes = 8
vframes = 19
frame = 147

[node name="AnimationPlayer" type="AnimationPlayer" parent="Maya kid"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_dv64b")
}

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_svule")

[node name="BubbleTimer" type="Timer" parent="."]

[node name="BubbleContainer" type="Node2D" parent="."]

[node name="SpeechBubble" parent="BubbleContainer" instance=ExtResource("3_nbatg")]
visible = false
